--- a/package.json
+++ b/package.json
@@ -5,5 +5,10 @@
     "expo": "^27.0.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz"
+  },
+  "devDependencies": {
+    "@types/react": "^16.3.14",
+    "@types/react-native": "^0.55.15",
+    "typescript": "^2.8.3"
   }
 }
