--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "scripts": {
-    "start": "concurrently \"tsc -w\" \"exp start\" -k"
+    "start": "concurrently \"tsc -w\" \"exp start\" -k",
+    "test": "jest"
   },
   "dependencies": {
     "expo": "^27.0.1",
@@ -10,9 +11,12 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz"
   },
   "devDependencies": {
+    "@types/jest": "^23.0.0",
     "@types/react": "^16.3.14",
     "@types/react-native": "^0.55.15",
     "concurrently": "^3.5.1",
+    "jest": "^23.1.0",
+    "ts-jest": "^22.4.6",
     "typescript": "^2.8.3"
   }
 }
